--- a/cl.css
+++ b/cl.css
@@ -111,6 +111,7 @@ a{
     margin: 0 auto; 
     gap: 20px;
     margin-top: -45px;
+    margin-bottom: -30px;
 }
 .imgdestaque img{
     width: 260px;
@@ -134,6 +135,7 @@ a{
     margin-left: 555px;
     margin-bottom: 60px;
     
+    
 }
 
 .vermais:hover{
@@ -146,7 +148,7 @@ footer{
     align-items: center;
     justify-content: stretch;
     gap: 20px;
-    
+    height: 150px;
 
 }
 footer ul{
@@ -212,3 +214,11 @@ footer ul{
    margin: 49px;
 }
 
+.copright{
+    margin-top: 30px;
+    display: flex;
+    color: white;
+    font-size: 12px;
+    margin-left: -480px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
